test/error/type/err1.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err1 = Component
  foo : slot( x: Weekday );

elementary
  foo : slot( x: Weekday )
    z : R{0,10} = x;
  end
end

